2014-01-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync: Renamed --synconly to sync-only to match
	OpenVAS style.

2014-01-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync: New option --synconly that will prevent
	updating of scanner and manager.
	(restart_openvassd): Renamed to update_openvassd and changed
	the restart directive of start-stop-daemon to the new SIGHUP mechanism.
	(update_openvasmd): Consistent wording with update_openvassd.
	(do_sync): Fix bug for refresh-only mode: Even the current-test should
	not be executed.

2014-01-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CHANGES: Updated. But set no date yet.

2014-01-09  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove --quiet option, making the NVT load messages depend on new option
	--progress instead.  Match the messages to the Manager style.

	* doc/openvassd.8.in: Replace --quiet with --progress.

	* src/openvassd.c (orig_argv): Remove.
	(init_openvassd): Replace quiet arg with progress arg.
	(main): Remove orig_argv processing.  I can't find anything that uses
	this variable.  Replace --quiet with --progress.

	* src/pluginload.c (plugins_init): Replace quiet arg with progress arg.
	(spin_progress): New function.
	(plugins_reload_from_dir): Replace quiet arg with progress arg.  Use
	"NVT" instead of "plugin" in progress messages.  Make the messages
	look more like the Manager ones.  Add load percent next to the total.

2014-01-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c: Remove useless include.

2014-01-07  Henri Doreau <henri.doreau@gmail.com>

	* src/pluginscheduler.c (plugin_next_unrun_dependencie): Removed unused
	variable 'counter'. Fixed unsafe use of 'flags'. Fixed and reduced
	indentation. Fixed braces(!).

2014-01-07  Henri Doreau <henri.doreau@gmail.com>

	* src/pluginscheduler.c (hash_get_deps_ptr): Removed useless code.
